--- a/riskmap-verra/doc_prefix.tex
+++ b/riskmap-verra/doc_prefix.tex
@@ -47,7 +47,7 @@
 
 \placelogotrue
 \begin{frame}
-  \frametitle{Plan}
+  \frametitle{Outline}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
       \tableofcontents[sections=1]
