--- a/riskmap-verra/doc_suffix.tex
+++ b/riskmap-verra/doc_suffix.tex
@@ -13,7 +13,8 @@
     \begin{block}{}
       \begin{center}
         \ldots~Thank you for attention~\ldots \\
-        \url{https://forestatrisk.cirad.fr} \\
+        \url{https://ecology.ghislainv.fr/deforisk-qgis-plugin} \\
+        \textbf{> Articles > References > Presentations} \\
         \includegraphics[width=0.8\textwidth]{figs/partners_logos}
       \end{center}
     \end{block}
