--- a/riskmap-verra/riskmap-verra.org
+++ b/riskmap-verra/riskmap-verra.org
@@ -1,4 +1,4 @@
-#+TITLE: Riskmaps for carbon credit certification
+#+TITLE: Risk maps for carbon credit certification
 #+AUTHOR: Ghislain Vieilledent
 #+DATE: @@latex:\today@@
 #+OPTIONS: author:nil date:nil title:nil H:3 toc:nil num:t ^:{}
@@ -11,7 +11,7 @@
 #+BEAMER_INNER_THEME: rounded
 #+BEAMER_OUTER_THEME: [subsection=false]miniframes
 #+COLUMNS: %45ITEM %10BEAMER_ENV(Env) %10BEAMER_ACT(Act) %4BEAMER_COL(Col)
-#+BEAMER_HEADER: \title[riskmaps]{Riskmaps for carbon credit certification}
+#+BEAMER_HEADER: \title[riskmaps]{Risk maps for carbon credit certification}
 #+BEAMER_HEADER: \definecolor{darkgreen}{RGB}{34,139,34} % vert moyen
 
 # This is used to avoid bold text to be translated as \alert{text}
@@ -94,11 +94,11 @@ Frances Seymour (WRI): [[https://www.wri.org/insights/insider-4-reasons-why-juri
 #+attr_latex: :width 8cm
 [[file:figs/get_started/allocation.png]]
 
-* Verra's tool VT0007 for risk maps
+* Verra methodology for risk mapping
 
-** VT0007 methodology
+** VT0007 tool
 
-*** VT0007 methodology
+*** VT0007 tool
 
 - Developed by Clark University (J. R. Eastman and R. G. Pontius Jr.) for Verra.
 - *Aim*: Obtaining the best risk map possible at the jurisdictional level.
@@ -127,55 +127,194 @@ Frances Seymour (WRI): [[https://www.wri.org/insights/insider-4-reasons-why-juri
 
 *** Benchmark model
 
+- Benchmark model or reference model.
+- A reasonably good deforestation model (better than a null model).
+- Assuming a /decrease of deforestation with distance to forest edge/ (commonly admitted).
+- And a /different model between subjurisdictions/ (regional variability).
+
+#+caption: Subjurisdictions in Martinique (MTQ)
+#+attr_latex: :width 3.5cm
+[[file:figs/subj.png]]
+
+*** Distance threshold
+
+- Identify the distance to forest edge below which *99.5%* of the deforestation occur.
+- Use this distance to define the first class of risk (class 1).
+  
+#+attr_latex: :width 8cm
+[[file:figs/get_started/perc_dist.png]]
+
+*** From distance to risk class
+
+- Distances below the threshold are transformed into classes of deforestation risk.
+- A geometric series is used for that, ensuring that classes have a wider range for bigger distances.
+- We define 29 additional classes of risk from 2 to 30 (class 1 has already been defined).
+
+#+attr_latex: :width 10cm
+[[file:figs/dist_class.png]]
+
+*** Classes from subjurisdictions
+
+- Each subjurisdiction get a number from 1 to (potentially) 999.
+- We combine classes derived from distance with subjurisdictions in the following way: $\textbf{DD}\text{SSS}$, with *DD* the distance class and SSS the subjurisdiction number.
+- We obtain classes going from 01001 to potentially 30999 if there are 999 subjurisdictions.
+- So for 10 subjurisdictions, we obtain ~300 classes (but some distance classes might be missing).
+
+*** Classes from subjurisdictions
+
+- Following these steps, we obtain a map at the jurisdictional level where each forest pixel belongs to a given class of deforestation risk.
+- Area in dark green: classes $\mathbf{1}\text{SSS}$, beyond the deforestation threshold.
+
+#+begin_center
+#+attr_latex: :width 3cm :center
+[[file:figs/prob_bm_t1_legend.png]]  
+#+attr_latex: :width 5cm :center
+[[file:figs/prob_bm_t1.png]]
+#+end_center
+
 *** Deforestation density
+
+- Each class $i$ has an associated *deforestation probability*: $\theta_{m,i} = d_{i} / n_{i}$ (unitless), with $d_{i}$ the number of deforested pixels during the period, and $n_{i}$ the number of forest pixels at the beginning of the period.
+- *Quantity adjustment $\rho$*: $\theta_{a,i} = \rho \theta_{m,i}$, so that total predicted deforestation = observed (or expected) deforestation. For the benchmark model for the calibration and historical periods, $\rho=1$.
+- *Deforestation density (in ha/yr per pixel)* computed as $\delta_{i} = \theta_{a,i} \times A / T$. $A$: pixel area (in ha), $T$: time-interval of the period (in yr).
+- The deforestation density is used to predict the amount of deforestation for each pixel belonging to a given class of deforestation risk.
+
+*** Deforestation density
+
+#+name: tab-defrate
+#+caption: Deforestation rates for each class of deforestation risk (numbers truncated to three decimal digits).
+#+attr_latex: :center nil :font \small :booktabs t
+|  cat | $n_i$ | $d_i$ |    $\theta_{m,i}$ |    $\theta_{a,i}$ | $T$ |  $A$ |      $\delta_{i}$ |
+|------+-------+-------+-----------+-----------+-----+------+-----------|
+| 1001 | 33433 |     0 |       0.0 |       0.0 |  10 | 0.09 |       0.0 |
+| 1002 | 12965 |     0 |       0.0 |       0.0 |  10 | 0.09 |       0.0 |
+| 1003 | 91686 |    19 | 2.072e-04 | 2.072e-04 |  10 | 0.09 | 1.865e-06 |
+| 1004 | 82279 |     5 | 6.076e-05 | 6.076e-05 |  10 | 0.09 | 5.469e-07 |
+| 2001 |  1373 |     0 |       0.0 |       0.0 |  10 | 0.09 |       0.0 |
+#+TBLFM: 
+
+*Deforestation density (in ha/yr per pixel)* computed as $\delta_{i} = \theta_{a,i} \times A / T$
+
+*** Deforestation density
+
+Deforestation density can be used to allocate deforestation to projects within a jurisdiction.
+
+#+caption: Allocating deforestation to projects within the jurisdiction.
+#+attr_latex: :width 8cm
+[[file:figs/get_started/allocation.png]]
 
 ** Alternative models and validation
 
 *** Alternative models
 
+- Alternative maps from alternative models must be compared with the benchmark model.
+- The alternative model can be of different forms: geoprocessing model (moving window), statistical model (iCAR, GLM, RF).
+- E.g. Clark Labs propose the MLP (Multi-Layer Perceptron) statistical model in the Land Change Modeller module of the [[https://clarklabs.org/terrset/][TerrSet]] software.
+
+*** Alternative models
+
+- A risk map with deforestation densities derived from the alternative model must be provided.
+
+#+caption: Risk map obtained with a moving window model.
+#+attr_latex: :width 4.5cm
+[[file:figs/prob_mw_11_t1.png]]
+
 *** Validation procedure
 
-** Verra/UClark software
+- Comparing predicted vs. observed deforestation (in ha) in a coarse grid.
+- For a given period of time.
 
-*** Verra/UClark software
+#+caption: Coarse grid covering the area of interest.
+#+attr_latex: :width 4.5cm
+[[file:figs/grid.png]]
 
-https://github.com/ClarkCGA/UDef-ARP/tree/v2.09
+*** Validation procedure
 
-- User must provide fcc, distance to forest edge raster, subjurisdictional borders.
-- Benchmark model.
-- Validation.
+- Comparing predicted vs. observed deforestation.
+- Performance indices: $R^2$, and median of absolute error (MedAE).
+
+#+attr_latex: :width 6.5cm
+[[file:figs/get_started/pred_obs_icar_validation_50.png]]
+
+*** Validation procedure
+
+- Performance indices are computed for each model.
+- The model with the higher $R^2$ and the lower MedAE is selected.
+
+#+name: tab-indices
+#+caption: Performance indices.
+#+attr_latex: :center nil :font \small :booktabs t
+| ncell | period     | model | MedAE |   R2 | RMSE | wRMSE |
+|-------+------------+-------+-------+------+------+-------|
+|   604 | validation | bm    |  2.71 | 0.43 | 6.08 |  6.22 |
+|   604 | validation | icar  |  1.78 | 0.65 | 4.79 |  4.59 |
+|   604 | validation | glm   |  2.39 | 0.38 | 6.39 |  6.52 |
+|   604 | validation | rf    |  2.09 | 0.50 | 5.69 |  5.74 |
+|   604 | validation | mw_11 |  2.34 | 0.56 | 7.66 |  6.83 |
+|   604 | validation | mw_21 |  2.51 | 0.56 | 7.54 |  6.66 |
+
+*** Validation procedure
+
+#+name: tab-periods
+[[file:figs/periods.png]]
+
+- We can compare predicted vs. observed deforestation for three time periods: *calibration*, *validation*, and *historical period*.
+- To estimate model performance at forecasting deforestation in the future: *predicted vs. observed deforestation* for the *validation period* with a model fitted over the *calibration period*.
+- This way, we use *independent observations* of deforestation for model validation (observed deforestation over the validation period have not be used to calibrate the model).
+- Verra's methodology: the alternative model must be better for both the calibration and validation periods.
+
+* Software for deforestation risk mapping
+
+** Verra/Clark Labs software
+
+*** Verra/Clark Labs software
+
+#+attr_latex: :width 9cm
+[[file:figs/verra_tool.png]]
+
+\centering Standalone app: https://github.com/ClarkCGA/UDef-ARP \\
+\centering QGIS plugin: https://github.com/ClarkCGA/UDef-ARP-Plugin
+
+*** Verra/Clark Labs software
+
+#+attr_latex: :width 6cm
+[[file:figs/verra_tool.png]]
+
+- User must provide rasters: forest cover change, distance to forest edge at several dates, subjurisdictional borders, alternative risk maps at several dates.
+- Using this data, the UDef-ARP provides the basis:
+  - for developing a benchmark model.
+  - for comparing the benchmark and alternative models.
 
 *** Limitations
 
-- Not tool to help prepare the data.
-- No tool to develop the alternative model.
-- Windows only.
-- Require a computer with high RAM for large jurisdiction: all raster inputs are stored in RAM during processing. Therefore, large jurisdictions will require substantial RAM allocations (e.g., 64Gb).
-- Several remarks:
+- No tool to help prepare the data.
+- No tool to help develop the alternative models.
+- Windows only (at the moment).
+- Require a computer with high RAM for large jurisdiction: all rasters are stored in RAM during processing. Therefore, large jurisdictions will require substantial RAM allocations (e.g., 64Gb).
+- Use of Float data for risk maps with deforestation density (ha/pixel/yr): large space on disk.
+- Documentation in English only, no translations available.
+- Recent tool, some feedbacks from users (e.g. Fronterra): [[https://www.linkedin.com/posts/fron-terra_forest-carbon-climatechange-activity-7179166090042732544-YnAK?utm_source=share&utm_medium=member_desktop][Post 1]], [[https://www.linkedin.com/posts/fron-terra_forest-carbon-climatechange-activity-7179721587267371008-PRXr?utm_source=share&utm_medium=member_desktop][Post 2]], [[https://www.linkedin.com/posts/fron-terra_carbon-climatechange-verra-activity-7180971577746862080-rolc?utm_source=share&utm_medium=member_desktop][Post 3]].
 
-** Links                                                          :noexport:
+** Existing software for alternative models
 
-Post 1 https://www.linkedin.com/posts/fron-terra_forest-carbon-climatechange-activity-7179166090042732544-YnAK?utm_source=share&utm_medium=member_desktop
+*** Existing software for alternative models
 
-Post 2
-https://www.linkedin.com/posts/fron-terra_forest-carbon-climatechange-activity-7179721587267371008-PRXr?utm_source=share&utm_medium=member_desktop
-
-Post 3 https://www.linkedin.com/posts/fron-terra_carbon-climatechange-verra-activity-7180971577746862080-rolc?utm_source=share&utm_medium=member_desktop
-
-* Software for modelling deforestation
-
-** Existing software
-
-*** Existing software
-- Dinamica EGO, CLUE, TerraSet (Clark U.).
+- Dinamica EGO:
+- Land Change Modeler (Clark Labs):
+- CLUE-S:
+- Note, in the documentation for UDef-ARP: Clark Labs plans to offer a utility to facilitate the creation of vulnerability maps for
+  alternative models in the near future.
 
 ** Limitations
 
 *** Limitations
+
 - All are not open source (transparency).
 - Difficulty to reproduce the results (transparency, reproducibility).
 - Large rasters on large jurisdiction ?
 - No scripting: not well adapted to repeat computation.
+
+*Vieilledent G.* 2021. ~forestatrisk~: a Python package for modelling and forecasting deforestation in the tropics. /Journal of Open Source Software/. *6* (59): 2975. doi: [[https://doi.org/10.21105/joss.02975][10.21105/joss.02975]].
 
 * Conclusion
 
